--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@types/chess.js": "^0.10.1",
     "autoprefixer": "^10.1.0",
+    "chess.js": "^0.11.0",
     "chessground": "^7.9.3",
     "corf": "^0.0.5",
     "lodash": "^4.17.20",
     "postcss": "^8.2.1",
     "react": "^17.0.1",
+    "react-chessground": "^1.5.0",
     "react-dom": "^17.0.1",
     "tailwindcss": "^2.0.2"
   }
